test/fail_compilation/gag4269f.d
// REQUIRED_ARGS: -c -o-

static if(is(typeof(X9.init))) {}
interface X9 { Y9 y; }